--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 			<ul id="guessList" class="guessBox clearfix">
 
 			</ul>
+			<br>
+			<h6 class="tie">developed by Tie</h6>
 
 		</section>
 		<!-- JavaScript -->
